fixing overlapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -82,10 +82,6 @@
     font-family:Arial, Helvetica, sans-serif;
 }
 
-.intro{
- 
-}
-
 .which-city{
     background-color: #FFB703;
 }
@@ -96,6 +92,18 @@
 
 .historic-places{
     background-color: #FFB703;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.historic-places .display {
+    display: flex;
+    flex-wrap: wrap;
+}
+  
+.historic-places .display > div {
+    width: 100%;
+    margin-bottom: 1rem;
 }
 
 .footer{
@@ -120,7 +128,7 @@
     color: whitesmoke;
 }
 
-@media screen and (min-width: 760px) {
+@media screen and (min-width: 768px) {
     .hero-title {
         flex-direction: row;
         justify-content: center;
@@ -138,6 +146,11 @@
     
     .width{
         max-width: 50%;
+    }
+
+    .historic-places .display > div {
+        width: calc(33.33% - 1rem);
+        margin: 0 0.5rem 1rem;
     }
 }   
 
